--- a/auction/templates/auctions/auction_game.html
+++ b/auction/templates/auctions/auction_game.html
@@ -445,8 +445,11 @@
             }, 1000)
             
         }
-
-        let ws = new WebSocket('ws://localhost:8000/ws/auctions/{{auction.group_name}}/')
+        if (window.location.protocol == 'https:') {
+            let ws = new WebSocket('wss://' + window.location.host + '/ws/auctions/{{auction.group_name}}/')
+        } else {
+            let ws = new WebSocket('ws://' + window.location.host + '/ws/auctions/{{auction.group_name}}/')
+        }
 
         function userBet() {
 
