--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -162,7 +162,7 @@
                 <p class="title_type_game_content">${{user.wallet.ballance | intcomma}}</p>
             </div>
             <div class="button_list">
-                <a href="/" class="no_hook">
+                <a href="https://t.me/DiamondGamingBot?start=transfer" class="no_hook">
                     <div class="send">
                         <p class="send_link button_text">{% trans "Send" %}</p>
                         <svg width="10" height="12" viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -170,7 +170,7 @@
                         </svg>    
                     </div>
                 </a>
-                <a href="/" class="no_hook">
+                <a href="https://t.me/DiamondGamingBot?start=balance_up" class="no_hook">
                     <div class="resend">
                         <p class="resend_link button_text">{% trans "Get" %}</p>
                         <svg width="11" height="12" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg">
