--- a/jackpots/templates/jackpots/jackpot_game.html
+++ b/jackpots/templates/jackpots/jackpot_game.html
@@ -301,8 +301,11 @@
         }
 
         updateBoxes()
-
-        let ws = new WebSocket('ws://localhost:8000/ws/jackpot/{{jackpot.group_name}}/')
+        if (window.location.protocol == 'https:') {
+            let ws = new WebSocket('wss://' + window.location.host + '/ws/jackpot/{{jackpot.group_name}}/')
+        } else {
+            let ws = new WebSocket('ws://' + window.location.host + '/ws/jackpot/{{jackpot.group_name}}/')
+        }
 
         function userBet() {
 
